// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is deactivated 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {
              "paddingHorizontal": 0,
              "paddingTop": 0,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "width": "100%",
              }
            }
          />
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#101010",
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "marginHorizontal": 8,
                "paddingHorizontal": 16,
                "transform": Array [
                  Object {
                    "translateY": 1334,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#101010",
                    "borderColor": "rgba(255,255,255,0.9)",
                    "borderRadius": 34,
                    "borderWidth": 3,
                    "height": 67,
                    "justifyContent": "center",
                    "marginTop": -33,
                    "padding": 17,
                    "width": 67,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="100%"
                  bbWidth="100%"
                  focusable={false}
                  height="100%"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": "100%",
                        "width": "100%",
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width="100%"
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M10.852 12.004L.23 22.7a.764.764 0 000 1.076.75.75 0 001.068 0L12 13l10.703 10.778a.75.75 0 001.069 0 .764.764 0 000-1.076L13.148 12.004l10.63-10.706a.764.764 0 000-1.075.752.752 0 00-1.067 0L12 11.008 1.289.223a.752.752 0 00-1.068 0 .764.764 0 000 1.076l10.631 10.705z"
                      fill={3875536895}
                      fillRule={1}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "red",
                  "borderRadius": 8,
                  "overflow": "hidden",
                  "width": "100%",
                }
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "#ffcc01",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status1
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="20"
                        bbWidth="20"
                        focusable={false}
                        height="20"
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width="20"
                      >
                        <RNSVGGroup>
                          <RNSVGPath
                            d="m10 .5c2.5385 0 4.9225.98752 6.7175 2.78246 1.795 1.79502 2.7825 4.17906 2.7825 6.71754 0 2.5385-.9875 4.9225-2.7825 6.7175s-4.179 2.7825-6.7175 2.7825c-2.53852 0-4.92256-.9875-6.71754-2.7825s-2.78246-4.179-2.78246-6.7175c0-2.53849.98748-4.92256 2.78246-6.71754 1.79494-1.79494 4.17901-2.78246 6.71754-2.78246z"
                            fill={4280293921}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                              ]
                            }
                            stroke={4294953985}
                          />
                          <RNSVGPath
                            d="m5.94446 5.16665c-.21478-.21479-.56302-.21479-.77781 0s-.21479.56303 0 .77781zm8.11104 9.66675c.2148.2147.5631.2147.7779 0 .2147-.2148.2147-.5631 0-.7779zm-8.88885-8.88894 8.88885 8.88894.7779-.7779-8.88894-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                          <RNSVGPath
                            d="m14.0555 5.16665c.2148-.21479.5631-.21479.7779 0 .2147.21479.2147.56303 0 .77781zm-8.11104 9.66675c-.21478.2147-.56302.2147-.77781 0-.21479-.2148-.21479-.5631 0-.7779zm8.88894-8.88894-8.88894 8.88894-.77781-.7779 8.88885-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "#ffcc01",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status2
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="20"
                        bbWidth="20"
                        focusable={false}
                        height="20"
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width="20"
                      >
                        <RNSVGGroup>
                          <RNSVGPath
                            d="m10 .5c2.5385 0 4.9225.98752 6.7175 2.78246 1.795 1.79502 2.7825 4.17906 2.7825 6.71754 0 2.5385-.9875 4.9225-2.7825 6.7175s-4.179 2.7825-6.7175 2.7825c-2.53852 0-4.92256-.9875-6.71754-2.7825s-2.78246-4.179-2.78246-6.7175c0-2.53849.98748-4.92256 2.78246-6.71754 1.79494-1.79494 4.17901-2.78246 6.71754-2.78246z"
                            fill={4280293921}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                              ]
                            }
                            stroke={4294953985}
                          />
                          <RNSVGPath
                            d="m5.94446 5.16665c-.21478-.21479-.56302-.21479-.77781 0s-.21479.56303 0 .77781zm8.11104 9.66675c.2148.2147.5631.2147.7779 0 .2147-.2148.2147-.5631 0-.7779zm-8.88885-8.88894 8.88885 8.88894.7779-.7779-8.88894-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                          <RNSVGPath
                            d="m14.0555 5.16665c.2148-.21479.5631-.21479.7779 0 .2147.21479.2147.56303 0 .77781zm-8.11104 9.66675c-.21478.2147-.56302.2147-.77781 0-.21479-.2148-.21479-.5631 0-.7779zm8.88894-8.88894-8.88894 8.88894-.77781-.7779 8.88885-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      false,
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "rgba(255,255,255,0.9)",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status3
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={20}
                        bbWidth={20}
                        focusable={false}
                        height={20}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width={20}
                      >
                        <RNSVGGroup>
                          <RNSVGGroup
                            fill={null}
                            fillRule={1}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                              fill={4285625086}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                              fill={4294967295}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 24,
                  "marginTop": 36,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "marginVertical": 5,
                    "opacity": 1,
                    "width": "100%",
                  }
                }
                testID="button"
              >
                <BVLinearGradient
                  colors={
                    Array [
                      4287699266,
                      4291964265,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  locations={null}
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "justifyContent": "center",
                        "width": "100%",
                      },
                      Object {
                        "height": 45,
                      },
                    ]
                  }
                  testID="gradient"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#ffffff",
                          "paddingTop": 5,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "fontFamily": "TTCommons-Medium",
                        },
                        Object {
                          "fontSize": 18,
                        },
                        Object {},
                      ]
                    }
                  >
                    CredentialForm.confirmBtn
                  </Text>
                </BVLinearGradient>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is fully supported 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {
              "paddingHorizontal": 0,
              "paddingTop": 0,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "width": "100%",
              }
            }
          />
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#101010",
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "marginHorizontal": 8,
                "paddingHorizontal": 16,
                "transform": Array [
                  Object {
                    "translateY": 1334,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#101010",
                    "borderColor": "rgba(255,255,255,0.9)",
                    "borderRadius": 34,
                    "borderWidth": 3,
                    "height": 67,
                    "justifyContent": "center",
                    "marginTop": -33,
                    "padding": 17,
                    "width": 67,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="100%"
                  bbWidth="100%"
                  focusable={false}
                  height="100%"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": "100%",
                        "width": "100%",
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={32}
                  width="100%"
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M31.333.357a1.219 1.219 0 00-1.724 0L9.852 20.114 2.08 12.343a1.219 1.219 0 10-1.724 1.724L8.99 22.7a1.22 1.22 0 001.724 0L31.333 2.08a1.219 1.219 0 000-1.723z"
                      fill={3875536895}
                      fillRule={1}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "red",
                  "borderRadius": 8,
                  "overflow": "hidden",
                  "width": "100%",
                }
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "rgba(255,255,255,0.9)",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status1
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={20}
                        bbWidth={20}
                        focusable={false}
                        height={20}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width={20}
                      >
                        <RNSVGGroup>
                          <RNSVGGroup
                            fill={null}
                            fillRule={1}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                              fill={4285625086}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                              fill={4294967295}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "rgba(255,255,255,0.9)",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status2
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={20}
                        bbWidth={20}
                        focusable={false}
                        height={20}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width={20}
                      >
                        <RNSVGGroup>
                          <RNSVGGroup
                            fill={null}
                            fillRule={1}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                              fill={4285625086}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                              fill={4294967295}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      false,
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "rgba(255,255,255,0.9)",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status3
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={20}
                        bbWidth={20}
                        focusable={false}
                        height={20}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width={20}
                      >
                        <RNSVGGroup>
                          <RNSVGGroup
                            fill={null}
                            fillRule={1}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                              fill={4285625086}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                              fill={4294967295}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 24,
                  "marginTop": 36,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "marginVertical": 5,
                    "opacity": 1,
                    "width": "100%",
                  }
                }
                testID="button"
              >
                <BVLinearGradient
                  colors={
                    Array [
                      4287699266,
                      4291964265,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  locations={null}
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "justifyContent": "center",
                        "width": "100%",
                      },
                      Object {
                        "height": 45,
                      },
                    ]
                  }
                  testID="gradient"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#ffffff",
                          "paddingTop": 5,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "fontFamily": "TTCommons-Medium",
                        },
                        Object {
                          "fontSize": 18,
                        },
                        Object {},
                      ]
                    }
                  >
                    CredentialForm.confirmBtn
                  </Text>
                </BVLinearGradient>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is inopeartive 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {
              "paddingHorizontal": 0,
              "paddingTop": 0,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.65)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "width": "100%",
              }
            }
          />
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#101010",
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "marginHorizontal": 8,
                "paddingHorizontal": 16,
                "transform": Array [
                  Object {
                    "translateY": 1334,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#101010",
                    "borderColor": "rgba(255,255,255,0.9)",
                    "borderRadius": 34,
                    "borderWidth": 3,
                    "height": 67,
                    "justifyContent": "center",
                    "marginTop": -33,
                    "padding": 17,
                    "width": 67,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="100%"
                  bbWidth="100%"
                  focusable={false}
                  height="100%"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": "100%",
                        "width": "100%",
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width="100%"
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M10.852 12.004L.23 22.7a.764.764 0 000 1.076.75.75 0 001.068 0L12 13l10.703 10.778a.75.75 0 001.069 0 .764.764 0 000-1.076L13.148 12.004l10.63-10.706a.764.764 0 000-1.075.752.752 0 00-1.067 0L12 11.008 1.289.223a.752.752 0 00-1.068 0 .764.764 0 000 1.076l10.631 10.705z"
                      fill={3875536895}
                      fillRule={1}
                      propList={
                        Array [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "red",
                  "borderRadius": 8,
                  "overflow": "hidden",
                  "width": "100%",
                }
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "#ffcc01",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status1
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="20"
                        bbWidth="20"
                        focusable={false}
                        height="20"
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width="20"
                      >
                        <RNSVGGroup>
                          <RNSVGPath
                            d="m10 .5c2.5385 0 4.9225.98752 6.7175 2.78246 1.795 1.79502 2.7825 4.17906 2.7825 6.71754 0 2.5385-.9875 4.9225-2.7825 6.7175s-4.179 2.7825-6.7175 2.7825c-2.53852 0-4.92256-.9875-6.71754-2.7825s-2.78246-4.179-2.78246-6.7175c0-2.53849.98748-4.92256 2.78246-6.71754 1.79494-1.79494 4.17901-2.78246 6.71754-2.78246z"
                            fill={4280293921}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                              ]
                            }
                            stroke={4294953985}
                          />
                          <RNSVGPath
                            d="m5.94446 5.16665c-.21478-.21479-.56302-.21479-.77781 0s-.21479.56303 0 .77781zm8.11104 9.66675c.2148.2147.5631.2147.7779 0 .2147-.2148.2147-.5631 0-.7779zm-8.88885-8.88894 8.88885 8.88894.7779-.7779-8.88894-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                          <RNSVGPath
                            d="m14.0555 5.16665c.2148-.21479.5631-.21479.7779 0 .2147.21479.2147.56303 0 .77781zm-8.11104 9.66675c-.21478.2147-.56302.2147-.77781 0-.21479-.2148-.21479-.5631 0-.7779zm8.88894-8.88894-8.88894 8.88894-.77781-.7779 8.88885-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      Object {
                        "borderBottomColor": "#201a21",
                        "borderBottomWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "rgba(255,255,255,0.9)",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status2
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={20}
                        bbWidth={20}
                        focusable={false}
                        height={20}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width={20}
                      >
                        <RNSVGGroup>
                          <RNSVGGroup
                            fill={null}
                            fillRule={1}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                              fill={4285625086}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                              fill={4294967295}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      false,
                      Object {
                        "backgroundColor": "#0b030d",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                        "paddingHorizontal": 13,
                        "paddingVertical": 11,
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "paddingTop": 5,
                            "textAlign": "center",
                          },
                          Object {
                            "color": "rgba(255, 255, 255, 0.7)",
                            "fontFamily": "TTCommons-Regular",
                            "fontSize": 20,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                          },
                          Array [
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "color": "#ffcc01",
                              "width": "80%",
                            },
                          ],
                        ]
                      }
                    >
                      AusweisCompatibilityStatus.status3
                    </Text>
                    <View
                      style={
                        Object {
                          "position": "absolute",
                          "right": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="20"
                        bbWidth="20"
                        focusable={false}
                        height="20"
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={20}
                        vbWidth={20}
                        width="20"
                      >
                        <RNSVGGroup>
                          <RNSVGPath
                            d="m10 .5c2.5385 0 4.9225.98752 6.7175 2.78246 1.795 1.79502 2.7825 4.17906 2.7825 6.71754 0 2.5385-.9875 4.9225-2.7825 6.7175s-4.179 2.7825-6.7175 2.7825c-2.53852 0-4.92256-.9875-6.71754-2.7825s-2.78246-4.179-2.78246-6.7175c0-2.53849.98748-4.92256 2.78246-6.71754 1.79494-1.79494 4.17901-2.78246 6.71754-2.78246z"
                            fill={4280293921}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                              ]
                            }
                            stroke={4294953985}
                          />
                          <RNSVGPath
                            d="m5.94446 5.16665c-.21478-.21479-.56302-.21479-.77781 0s-.21479.56303 0 .77781zm8.11104 9.66675c.2148.2147.5631.2147.7779 0 .2147-.2148.2147-.5631 0-.7779zm-8.88885-8.88894 8.88885 8.88894.7779-.7779-8.88894-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                          <RNSVGPath
                            d="m14.0555 5.16665c.2148-.21479.5631-.21479.7779 0 .2147.21479.2147.56303 0 .77781zm-8.11104 9.66675c-.21478.2147-.56302.2147-.77781 0-.21479-.2148-.21479-.5631 0-.7779zm8.88894-8.88894-8.88894 8.88894-.77781-.7779 8.88885-8.88885z"
                            fill={4294953985}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 24,
                  "marginTop": 36,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "marginVertical": 5,
                    "opacity": 1,
                    "width": "100%",
                  }
                }
                testID="button"
              >
                <BVLinearGradient
                  colors={
                    Array [
                      4287699266,
                      4291964265,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  locations={null}
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "justifyContent": "center",
                        "width": "100%",
                      },
                      Object {
                        "height": 45,
                      },
                    ]
                  }
                  testID="gradient"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#ffffff",
                          "paddingTop": 5,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "fontFamily": "TTCommons-Medium",
                        },
                        Object {
                          "fontSize": 18,
                        },
                        Object {},
                      ]
                    }
                  >
                    CredentialForm.confirmBtn
                  </Text>
                </BVLinearGradient>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
